Fixed bug where 404 images didn't show. Fixed bug where checkbox alignment was wrong. Changed the way answering a question works. On failure, disable selections, show incorrect. On success, disable selections, show correct.

--- a/TwolipsDating/Content/Site.css
+++ b/TwolipsDating/Content/Site.css
@@ -77,11 +77,11 @@ input[type="checkbox"].input-validation-error {
 }
 
 /*.radio input[type="radio"],
-.radio-inline input[type="radio"],
+.radio-inline input[type="radio"],}*/
 .checkbox input[type="checkbox"],
 .checkbox-inline input[type="checkbox"] {
     margin-left: 0;
-}*/
+}
 
 .jumbotron {
     padding: 10px;
